asset/template/gangway/01-namespace.yaml
#@ load("@ytt:data", "data")
apiVersion: v1
kind: Namespace
metadata:
  name: #@ data.values.namespace
